--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Lời giới thiệu">
   <ion-content class="padding">
 	<h3>DAS Diet</h3>
-	<img src="http://i.imgur.com/52dr1N2.jpg" alt="DAS diet">
+	<img src="../img/das.jpg" alt="DAS diet">
 	<p><b>DAS Diet ( Dr.Anh's Secret Diet)</b> là chế độ ăn kiêng dựa trên nguyên lí <b>Low
 Carb</b> do <b>Dr.Anh</b> ( Nguyễn Hoàng Anh aka <b>ha_misi</b> ) phát triển và phổ biến ở Việt Nam.
 Khác với Atkins Diet, DAS Diet đã được "Việt Nam hóa" và biến đổi đi rất nhiều. Nội dung
