--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,7 +12,7 @@
       <li>Phiên bản: 0.0.3</li>
       <li>Email:  thanhrossi.tt@gmail.com</li>
       <li>Facebook: <a href="http://fb.me/thanhrossi">fb.me/thanhrossi</a></li>
-      <li>Nguồn: ăn cắp</a></li>
+      <li>Nguồn: <a href="http://www.facebook.com/dasdiet" target="_blank">Dasdiet</a></a></li>
     </ul>
   </ion-content>
 </ion-modal-view>
