--- a/www/css/style.css
+++ b/www/css/style.css
@@ -44,3 +44,7 @@ ul.das-list li{
 .chap-listing ion-item.item.item-complex:nth-last-child(-n+3) {
     padding-left: 20px;
 }
+.link-ex {
+	text-decoration: none;
+	font-weight: bold;
+}
