--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -26,11 +26,14 @@
           <i class="icon ion-ios-list"></i>
           Danh sách chương
         </ion-item>
+        <ion-item menu-close href="#/app/elists">
+          <i class="icon ion-ios-list"></i>
+          eDAS
+        </ion-item>
         <ion-item menu-close ng-click="login()">
           <i class="icon ion-information-circled"></i>
           Thông tin ứng dụng
         </ion-item>
-        
       </ion-list>
     </ion-content>
   </ion-side-menu>
