--- a/www/templates/elists.html
+++ b/www/templates/elists.html
@@ -4,6 +4,7 @@
         </a>
     </ion-nav-buttons>
     <ion-content class="has-header padding">
+        <img src="img/edas.jpg" alt="edas" style="height: 150px;"/>
         <ion-list class="">
             <ion-item ng-repeat="echap in eLists" href="#/app/echuong{{echap.id}}">
                 {{echap.title}}
